add classes for js and logging data in dev console

--- a/contact.html
+++ b/contact.html
@@ -63,23 +63,23 @@
             <h2 class="contact__header">Dites nous tout&nbsp;!</h2>
             <p class="contactForm__paragraph">
                 <label class="contactForm__label" for="surname">Nom *</label>
-                <input class="contactForm__field" id="surname" name="lastName" required>
+                <input class="contactForm__field js-lastName" id="surname" name="lastName" required>
             </p>
             <p class="contactForm__paragraph">
                 <label class="contactForm__label" for="name">Prénom *</label>
-                <input class="contactForm__field" id="name" name="firstName" required>
+                <input class="contactForm__field js-firstName" id="name" name="firstName" required>
             </p>
             <p class="contactForm__paragraph">
                 <label class="contactForm__label" for="phone">Téléphone</label>
-                <input class="contactForm__field" id="phone" type="tel" name="phone">
+                <input class="contactForm__field js-phoneNumber" id="phone" type="tel" name="phone">
             </p>
             <p class="contactForm__paragraph">
                 <label class="contactForm__label" for="email">Adresse mail *</label>
-                <input class="contactForm__field" id="email" type="email" name="email" required>
+                <input class="contactForm__field js-emailAddress" id="email" type="email" name="email" required>
             </p>
             <p class="contactForm__paragraph">
                 <label class="contactForm__label" for="message">Message *</label>
-                <textarea class="contactForm__field contactForm__field--textarea" id="message" name="message"
+                <textarea class="contactForm__field contactForm__field--textarea js-message" id="message" name="message"
                     placeholder="Tapez votre message ici" required></textarea>
             </p>
             <p class="contactForm__paragraph">
