--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/form.css">
+    <link rel="stylesheet" href="css/modal.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/footer.css">
 
@@ -59,7 +60,7 @@
             <img class="logo__img" src="assets/logo_mrcoffee.png" alt="big cafe's logo">
         </h1>
 
-        <form class="contactForm">
+        <form class="contactForm js-contactForm">
             <h2 class="contact__header">Dites nous tout&nbsp;!</h2>
             <p class="contactForm__paragraph">
                 <label class="contactForm__label" for="surname">Nom *</label>
@@ -87,6 +88,17 @@
             </p>
         </form>
 
+        <div class="modal__contener modal hidden">
+            <img class="modal__img" src="assets/logo_dark.png" alt="cafe's logo">
+            <h2 class="modal__header">MERCI<br><br>
+                Votre message a bien été envoyé&nbsp;!
+            </h2>
+            <p class="modal__paragraph">
+                Nous essaierons d’y répondre au mieux dans les plus brefs délais. À bientot chez Mr.Coffee
+            </p>
+            <button class="button">FERMER</button>
+        </div>
+
         <section class="contact">
             <h2 class="contact__header">On vous attend&nbsp;!</h2>
             <h3 class="contact__cafeName">Mr.Coffee</h3>
@@ -109,6 +121,7 @@
             </iframe>
         </section>
 
+        <div class="overlay hidden"></div>
     </main>
 
     <footer class="footer">
