separate styles into invitation file

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/presentation.css">
+    <link rel="stylesheet" href="css/invitation.css">
     <link rel="stylesheet" href="css/footer.css">
 </head>
 
