--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/form.css">
+    <link rel="stylesheet" href="css/contactForm.css">
     <link rel="stylesheet" href="css/modal.css">
     <link rel="stylesheet" href="css/contactUs.css">
     <link rel="stylesheet" href="css/footer.css">
@@ -94,9 +94,9 @@
                 Votre message a bien été envoyé&nbsp;!
             </h2>
             <p class="modal__paragraph">
-                Nous essaierons d’y répondre au mieux dans les plus brefs délais. À bientot chez Mr.Coffee
+                Nous essaierons d’y répondre au mieux dans les plus brefs délais. À&nbsp;bientot chez Mr.Coffee
             </p>
-            <button class="button js-closeButton">FERMER</button>
+            <button class="button button--modal js-closeButton">FERMER</button>
         </div>
 
         <section class="contactUs">
